MVC Router & Controller & Model, Read form DB & Show detail & Create new

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,3 +1,23 @@
-<header>
-    <h1>header</h1>
-</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">HEW EDUCATION</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Courses
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" href="#">NodeJS & ExpressJS</a></li>
+            <li><a class="dropdown-item" href="#">HTML & CSS</a></li>
+            <li><a class="dropdown-item" href="#">Framework</a></li>
+            <li><a class="dropdown-item" href="/courses/create">Create Courses</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
