--- a/src/resources/views/courses/show.hbs
+++ b/src/resources/views/courses/show.hbs
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-lg-3">
             <button class="btn btn-primary">Học Ngay</button>
+            <ul>
+                <li>{{course.level}}</li>
+            </ul>
         </div>
         <div class="col-lg-9">
             <h1>{{course.name}}</h1>
