--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,23 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="/">HEW EDUCATION</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Courses
+            User
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="#">NodeJS & ExpressJS</a></li>
-            <li><a class="dropdown-item" href="#">HTML & CSS</a></li>
-            <li><a class="dropdown-item" href="#">Framework</a></li>
-            <li><a class="dropdown-item" href="/courses/create">Create Courses</a></li>
+            <li><a class="dropdown-item" href="/courses/create">Đăng ký khóa học</a></li>
+            <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a></li>
+            <li><a class="dropdown-item" href="/search">Tìm kiếm</a></li>
+            <li><a class="dropdown-item" href="/news">Tin tức</a></li>
+            <li class="dropdown-divider"></li>
+
+            <li><a class="dropdown-item" href="/">Đăng xuất</a></li>
+
           </ul>
         </li>
       </ul>
     </div>
+    
   </div>
 </nav>
