--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,5 +1,5 @@
 <div class="mt-4">
-    <h1>Khóa học của tôi</h1>
+  <h1>Khóa học của tôi</h1>
 </div>
 <table class="table">
   <thead>
@@ -18,8 +18,51 @@
       <td>{{this.description}}</td>
       <td>{{this.level}}</td>
       <td><a class="btn btn-primary" href="/courses/{{this._id}}/edit" role="button">Sửa</a></td>
-      <td><a class="btn btn-primary" href="#" role="button">Xóa</a></td>
+      <td><a type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#delete-course-Modal" href=""
+          data-id="{{this._id}}">Xóa</a></td>
     </tr>
     {{/each}}
   </tbody>
 </table>
+
+
+<!-- Modal confirm delete-->
+<div class="modal fade" id="delete-course-Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Bạn có chắc chắn muốn xóa khóa học không ?
+      </div>
+      <div class="modal-footer">
+        <button id="btn-delete-course-modal" type="button" class="btn btn-danger">Xóa</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+      </div>
+    </div>
+  </div>
+</div>
+{{!-- Delete hidden form --}}
+<form name="delete-course-form" method="POST"></form>
+
+<script>
+  const deleteCourse = document.getElementById('delete-course-Modal');
+  var courseId;
+  var deleteForm = document.forms['delete-course-form'];
+  var btnDeleteCourse = document.getElementById('btn-delete-course-modal');
+
+  if (deleteCourse) {
+    deleteCourse.addEventListener('show.bs.modal', event => {
+      const button = event.relatedTarget;
+      courseId = button.getAttribute('data-id');
+    })
+    // When delete course btn clicked
+    btnDeleteCourse.onclick = () => {
+      deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
+      deleteForm.submit();
+    }
+  }
+</script>
