--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -12,7 +12,7 @@
             User
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="/courses/create">Đăng ký khóa học</a></li>
+            <li><a class="dropdown-item" href="/courses/create">Đăng khóa học</a></li>
             <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a></li>
             <li><a class="dropdown-item" href="/search">Tìm kiếm</a></li>
             <li><a class="dropdown-item" href="/news">Tin tức</a></li>
