--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,46 +1,65 @@
-<div class="mt-4">
+<form mane="container-form" method="POST" action="/courses/handle-form-actions" class="mt-4">
   <div>
     <h1>Khóa học của tôi đã xóa</h1>
     <a href="/me/stored/courses">Danh sách khóa học</a>
+    <div class="form-check mt-4">
+      <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+      <label class="form-check-label" for="checkbox-all">
+        Chọn tất cả
+      </label>
+      <select class="form-control-sm checkbox-all-options" name="action" required>
+        <option value="">-- Chọn --</option>
+        <option value="delete-force"> Xóa vĩnh viễn </option>
+        <option value="restore"> Khôi phục </option>
+      </select>
+      <button class="btn btn-primary check-all-submit-btn disabled" >Thực hiện</button>
+    </div>
   </div>
-</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Description</th>
-      <th scope="col">Level</th>
-      <th scope="col">Thời gian xóa</th>
-  </thead>
-  <tbody>
-    {{#each courses}}
-    <tr>
-      <th scope="row">{{sum @index 1}}</th>
-      <td>{{this.name}}</td>
-      <td>{{this.description}}</td>
-      <td>{{this.level}}</td>
-      <td>{{this.deletedAt}}</td>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col" colspan="2">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Level</th>
+        <th scope="col">Thời gian xóa</th>
+    </thead>
+    <tbody>
+      {{#each courses}}
+      <tr>
+        <td>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+          </div>
+        </td>
+        <td scope="row">{{sum @index 1}}</td>
+        <td>{{this.name}}</td>
+        <td>{{this.description}}</td>
+        <td>{{this.level}}</td>
+        <td>{{this.deletedAt}}</td>
 
-      <td><a class="btn btn-primary btn-restore" href="" data-id="{{this._id}}" role="button">Khôi phục</a></td>
-      <td><a type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#delete-course-Modal" href=""
-          data-id="{{this._id}}">Xóa vĩnh viễn</a></td>
-    </tr>
+        <td>
+          <a class="btn btn-primary btn-restore" href="" data-id="{{this._id}}" role="button">Khôi phục</a>
+        </td>
+        <td>
+          <a type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#delete-course-Modal" href=""
+            data-id="{{this._id}}">Xóa vĩnh viễn</a>
+        </td>
+      </tr>
 
-    {{else}}
-    <tr>
-      <td colspan="5" class="text-center">
-        <div> Thùng rác trống
-          <a href="/me/stored/course">Danh sách khóa học</a>
-        </div>
-      </td>
-    </tr>
+      {{else}}
+      <tr>
+        <td colspan="5" class="text-center">
+          <div> Thùng rác trống
+            <a href="/me/stored/course">Danh sách khóa học</a>
+          </div>
+        </td>
+      </tr>
 
-
-
-    {{/each}}
-  </tbody>
-</table>
+      {{/each}}
+    </tbody>
+  </table>
+</form>
 
 
 <!-- Modal confirm delete-->
@@ -73,6 +92,9 @@
   var restoreForm = document.forms['restore-course-form'];
   var btnDeleteCourse = document.getElementById('btn-delete-course-modal');
   var btnRestore = document.getElementsByClassName('btn-restore');
+  var checkboxAll = $('#checkbox-all');
+  var courseItemCheckbox = $('input[name="courseIds[]');
+  var checkAllSubmitBtn = $('.check-all-submit-btn');
 
   deleteCourse.addEventListener('show.bs.modal', event => {
     const button = event.relatedTarget;
@@ -94,6 +116,37 @@
       restoreForm.action = '/courses/' + courseId + '/restore?_method=PATCH';
       restoreForm.submit();
     });
+  }
+
+  checkboxAll.change(function () {
+    var isCheckedAll = $(this).prop('checked');
+    courseItemCheckbox.prop('checked', isCheckedAll);
+    renderCheckAllSubmitBtn();
+  })
+  courseItemCheckbox.change(function () {
+    var isCheckedAll = courseItemCheckbox.length == $('input[name="courseIds[]"]:checked').length;
+    checkboxAll.prop('checked', isCheckedAll);
+    renderCheckAllSubmitBtn();
+  });
+
+  //Check all submit button clicked
+  checkAllSubmitBtn.change(function (e) {
+    e.preventDefault();
+
+    var isSubmitTable = !$(this).hasClass('disabled');
+    if (isSubmitTable) {
+      containerForm.submit();
+    }
+  });
+
+  //Re-render check all submit button
+  function renderCheckAllSubmitBtn() {
+    var checkedCount = $('input[name="courseIds[]"]:checked').length;
+    if (checkedCount > 0) {
+      checkAllSubmitBtn.removeClass('disabled')
+    } else {
+      checkAllSubmitBtn.addClass('disabled')
+    }
   }
 
 
