--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -12,7 +12,7 @@
         <option value="delete-force"> Xóa vĩnh viễn </option>
         <option value="restore"> Khôi phục </option>
       </select>
-      <button class="btn btn-primary check-all-submit-btn disabled" >Thực hiện</button>
+      <button class="btn btn-primary check-all-submit-btn" disabled >Thực hiện</button>
     </div>
   </div>
   <table class="table">
@@ -129,23 +129,13 @@
     renderCheckAllSubmitBtn();
   });
 
-  //Check all submit button clicked
-  checkAllSubmitBtn.change(function (e) {
-    e.preventDefault();
-
-    var isSubmitTable = !$(this).hasClass('disabled');
-    if (isSubmitTable) {
-      containerForm.submit();
-    }
-  });
-
   //Re-render check all submit button
   function renderCheckAllSubmitBtn() {
     var checkedCount = $('input[name="courseIds[]"]:checked').length;
     if (checkedCount > 0) {
-      checkAllSubmitBtn.removeClass('disabled')
+      checkAllSubmitBtn.attr('disabled', false);
     } else {
-      checkAllSubmitBtn.addClass('disabled')
+      checkAllSubmitBtn.attr('disabled', true);
     }
   }
 
