--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -12,18 +12,30 @@
         <option value="">-- Chọn --</option>
         <option value="delete"> Xóa </option>
       </select>
-      <button class="btn btn-primary check-all-submit-btn" disabled >Thực hiện</button>
+      <button class="btn btn-primary check-all-submit-btn" disabled>Thực hiện</button>
     </div>
   </div>
 
   <table class="table">
     <thead>
       <tr>
-        <th scope="col" colspan="2">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Description</th>
-        <th scope="col">Level</th>
-        <th scope="col">Thời gian tạo</th>
+        <th scope="col"></th>
+        <th scope="col">ID
+          {{{sortable '_id' _sort}}}
+        </th>
+        <th scope="col">Name
+          {{{sortable 'name' _sort}}}
+        </th>
+        <th scope="col">Description
+          {{{sortable 'description' _sort}}}
+
+        </th>
+        <th scope="col">Level
+          {{{sortable 'level' _sort}}}
+        </th>
+        <th scope="col">Thời gian tạo
+          {{{sortable 'updatedAt' _sort}}}
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -34,7 +46,7 @@
             <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
           </div>
         </td>
-        <td scope=" row">{{sum @index 1}}
+        <td scope=" row">{{this._id}}
         </td>
         <td>{{this.name}}</td>
         <td>{{this.description}}</td>
@@ -54,7 +66,7 @@
         </td>
       </tr>
       {{/each}}
-      
+
     </tbody>
   </table>
 </form>
